--- a/front/src/components/admin/Admin.scss
+++ b/front/src/components/admin/Admin.scss
@@ -64,7 +64,7 @@
 .user {
   width: 50%;
   position: relative;
-  height: 40px;
+  min-height: 70px;
   border-radius: 5px;
   border: 1px solid gray;
   display: flex;
