--- a/front/src/components/admin/Admin.scss
+++ b/front/src/components/admin/Admin.scss
@@ -59,6 +59,15 @@
     height: 35px;
     margin-left: 10px;
   }
+
+  &-addSongButton {
+    margin-top: 15px;
+    background-color: #0d92e5;
+  }
+
+  &-searchFilter {
+    width: 600px !important;
+  }
 }
 
 .user {
